--- a/owners.html
+++ b/owners.html
@@ -44,7 +44,7 @@
                     <div class="text-side">
                         <h3>Strategic Planning and Adaptation</h3>
                         <p>In the dynamic field of hospitality, strategic planning and adaptation are crucial. Explore ways to align your business strategy with market trends, innovate service offerings, and make data-driven decisions for sustainable growth. Connect with industry experts for insights.</p>
-                        <a href="strategy-resources.html">Strategic Resources</a>
+                        <a href="https://www.youtube.com/watch?v=qkU3uwWyAn8" target="_blank" alt="hotel strategy video">Strategic Resources</a>
                     </div>
                 </article>
                 <article class="article-right">
@@ -57,7 +57,8 @@
                     <div class="text-side">
                         <h3>Embracing New Marketing Trends</h3>
                         <p>Understanding and implementing the latest marketing trends can set your business apart. Dive into digital marketing techniques, social media engagement strategies, and customer relationship management to enhance your brand's visibility and customer loyalty.</p>
-                        <a href="marketing-insights.html">Marketing Insights</a>
+                        <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank">New Tech to Make Thing Easier</a>
+
                     </div>
                 </article>
                 <article class="article-left">
@@ -70,7 +71,7 @@
                     <div class="text-side">
                         <h3>Effective Staff Management</h3>
                         <p>The success of your business greatly depends on your staff. Learn about effective staff training programs, motivational strategies, and ways to foster a positive work environment that ensures high productivity and job satisfaction.</p>
-                        <a href="staff-management-tips.html">Staff Management Tips</a>
+                        <a href="www.theworkwall.com" target="_blank" alt="link to WorkWall app"> App to Help With Your Staff Management</a>
                     </div>
                 </article>
             </div>
