--- a/managers.html
+++ b/managers.html
@@ -42,13 +42,13 @@
             <div class="container">
                 <article class="article-left">
                     <div class="image-side">
-                        <img src="Images/Reality-HR-team-building-1024x624.webp" alt="Team Building">
+                        <img src="Images/Reality-HR-team-building-1024x624.webp" alt="Team Building pic">
                         <div class="overlay">Team Building Insights</div>
                     </div>
                     <div class="text-side">
                         <h3>Building and Leading Effective Teams</h3>
                         <p>Learn the art of team building and leadership in the hospitality industry. Explore methods to motivate your team, foster a collaborative environment, and manage diverse groups effectively for optimal performance.</p>
-                        <a href="team-building.html">Team Building Techniques</a>
+                        <a href="https://www.youtube.com/watch?v=bwcyXcOpWVs" target="_blank" alt="ted talk on team building">TedTalk: Team Building Tips</a>
                     </div>
                 </article>
                 <article class="article-right">
@@ -59,7 +59,7 @@
                     <div class="text-side">
                         <h3>Enhancing Customer Service</h3>
                         <p>Customer service excellence is key to success. Gain insights into delivering outstanding customer experiences, handling customer feedback constructively, and implementing service improvements that make a difference.</p>
-                         <a href="customer-service.html">Customer Service Tips</a>
+                         <a href="https://www.youtube.com/watch?v=s5ROSlL94tg" target="_blank" alt="video on customer service">Video: Customer Service Tips</a>
                     </div>
                 </article>
                 <article class="article-left">
@@ -70,7 +70,7 @@
                     <div class="text-side">
                         <h3>Optimizing Operational Efficiency</h3>
                         <p>Maximize the efficiency of your operations with these best practices. From streamlining processes to utilizing technology effectively, discover ways to increase productivity while maintaining high-quality standards.</p>
-                       <a href="operational-tips.html">Operational Efficiency Tips</a>
+                       <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank" alt="video: how tech can help">How Tech Can Help</a>
                     </div>
                 </article>
             </div>
