fix cursor popupo

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <a href="https://whatsapp.com" target="_blank">Join WhatsApp Group</a>
         </div>
         <div>
-            <img class="media-icon" src="Images/facebook-iconwhatsapp-icon.png" alt="Facebook">
+            <img class="media-icon" src="Images/facebook-icon.png" alt="Facebook">
             <a href="https://facebook.com" target="_blank">Join Facebook Group</a>
         </div>
 
