--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                     <div class="image-side">
                         <img src="Images/challenge-food.jpeg" alt="Industry Challenges">
                         <div class="overlay">
-                            <p>"Every challenge leads to growth."</p>
+                            <p>"Hospitality is a very challenging industry at the moment, you're not alone."</p>
                         </div>
                     </div>
                     <div class="text-side">
                         <h3>Overcoming Industry Challenges</h3>
-                        <p>Adapt and thrive amid industry shifts. Explore strategies for resilience and success.</p>
+                        <p>We can help you cope in these tough times. Explore strategies for resilience and success.</p>
                         <a href="owners.html">Advice for Owners</a> <a href="managers.html">Guidance for Managers</a>
                     </div>
                 </article>
@@ -50,11 +50,11 @@
                     <div class="image-side">
                         <img src="Images/resilince.jpeg" alt="Resilience Resources">
                         <div class="overlay">
-                            <p>"Build resilience to navigate through the toughest times."</p>
+                            <p>"If you're feeling the strain of hospitality, we can help you find support."</p>
                         </div>
                     </div>
                     <div class="text-side">
-                        <h3>Resources for Resilience</h3>
+                        <h3>Getting Through The Strain</h3>
                         <p>Empower yourself with resources for personal and professional development.</p>
                         <a href="staff.html">Support for Staff</a>
                     </div>
@@ -63,12 +63,12 @@
                     <div class="image-side">
                         <img src="Images/team-strenght.jpeg" alt="Community Support">
                         <div class="overlay">
-                            <p>"Together, we can overcome any obstacle."</p>
+                            <p>"You're not alone, connect with peers having similar issues."</p>
                         </div>
                     </div>
                     <div class="text-side">
                         <h3>Community Support</h3>
-                        <p>Engage with your peers and build a supportive network.</p>
+                        <p>Engage with your peers and help build a supportive network.</p>
                         <label for="communityPopupCheckbox" class="popup-button">Join Our Community</label>
                     </div>
                 </article>
@@ -84,13 +84,13 @@
         <h2>Join Our Community</h2>
         <p>Connect with us on different platforms:</p>
 
-        <div>
+        <div >
             <img class="media-icon" src="Images/whatsapp-icon.png" alt="WhatsApp">
-            <a href="https://whatsapp.com" target="_blank">Join WhatsApp Group</a>
+            <a class="media-link" href="https://whatsapp.com" target="_blank">Join WhatsApp Group</a>
         </div>
-        <div>
+        <div >
             <img class="media-icon" src="Images/facebook-icon.png" alt="Facebook">
-            <a href="https://facebook.com" target="_blank">Join Facebook Group</a>
+            <a class="media-link" href="https://facebook.com" target="_blank">Join Facebook Group</a>
         </div>
 
         <h3 class="subscribe-head">Subscribe to our Newsletter</h3>
@@ -105,8 +105,10 @@
             <p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
         </div>
     </footer>
+</body>
+<div class="icon-ref">
   <a href="https://www.flaticon.com/free-icons/whatsapp" title="whatsapp icons">Whatsapp icons created by Pixel perfect - Flaticon</a>
 
 <a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">Facebook icons created by Hight Quality Icons - Flaticon</a>
-</body>
+</div>
 </html>
