--- a/managers.html
+++ b/managers.html
@@ -35,7 +35,7 @@
         <section class="hero" style="background-image: url('Images/helpdesk.webp');">
             <div class="container">
                 <h2>Welcome, Hospitality Managers</h2>
-                <p>Discover key strategies and insights to enhance your management skills and improve your establishment's performance.</p>
+                <p>Discover key strategies and insights to enhance your management skills and improve your venue's performance.</p>
             </div>
         </section>
         <section class="content">
@@ -43,33 +43,33 @@
                 <article class="article-left">
                     <div class="image-side">
                         <img src="Images/Reality-HR-team-building-1024x624.webp" alt="Team Building pic">
-                        <div class="overlay">Team Building Insights</div>
+                        <div class="overlay">A stronger team can make your life a lot easier.</div>
                     </div>
                     <div class="text-side">
                         <h3>Building and Leading Effective Teams</h3>
-                        <p>Learn the art of team building and leadership in the hospitality industry. Explore methods to motivate your team, foster a collaborative environment, and manage diverse groups effectively for optimal performance.</p>
+                        <p>Learn the art of team building and leadership in the hospitality industry. Explore methods to motivate your team, foster a collaborative & engaging environment, and manage your staff effectively for optimal performance.</p>
                         <a href="https://www.youtube.com/watch?v=bwcyXcOpWVs" target="_blank" alt="ted talk on team building">TedTalk: Team Building Tips</a>
                     </div>
                 </article>
                 <article class="article-right">
                     <div class="image-side">
                         <img src="Images/unhappy-guest-client-or-tourist-is-leaving-hotel-vector-cartoon-stick-figure-illustration-2HJC1M2.jpeg" alt="Customer Service Excellence">
-                        <div class="overlay">Customer Service Excellence</div>
+                        <div class="overlay">Just a 5% increase in customer retention can almost double profits.</div>
                     </div>
                     <div class="text-side">
                         <h3>Enhancing Customer Service</h3>
-                        <p>Customer service excellence is key to success. Gain insights into delivering outstanding customer experiences, handling customer feedback constructively, and implementing service improvements that make a difference.</p>
+                        <p>Happy customers are key to success. Gain insights into delivering outstanding customer experiences, handling customer feedback constructively, and implementing service improvements that make a difference.</p>
                          <a href="https://www.youtube.com/watch?v=s5ROSlL94tg" target="_blank" alt="video on customer service">Video: Customer Service Tips</a>
                     </div>
                 </article>
                 <article class="article-left">
                     <div class="image-side">
                         <img src="Images/oprtn_efficncy.jpeg" alt="Operational Efficiency">
-                        <div class="overlay">Operational Efficiency</div>
+                        <div class="overlay">More efficiency means more profits.</div>
                     </div>
                     <div class="text-side">
                         <h3>Optimizing Operational Efficiency</h3>
-                        <p>Maximize the efficiency of your operations with these best practices. From streamlining processes to utilizing technology effectively, discover ways to increase productivity while maintaining high-quality standards.</p>
+                        <p>Maximize the efficiency of your operations with these improvements. From streamlining processes to utilizing technology effectively, discover ways to increase productivity while maintaining high-quality standards.</p>
                        <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank" alt="video: how tech can help">How Tech Can Help</a>
                     </div>
                 </article>
