--- a/owners.html
+++ b/owners.html
@@ -29,7 +29,7 @@
         <section class="hero" style="background-image: url('Images/helpdesk.webp');">
             <div class="container">
                 <h2>Welcome, Business Owners</h2>
-                <p>Explore a wealth of resources and advice tailored to help you succeed in the hospitality industry.</p>
+                <p>Here you can find resources and advice tailored to help you succeed & manage in the hospitality industry.</p>
             </div>
         </section>
         <section class="content">
@@ -43,7 +43,7 @@
                     </div>
                     <div class="text-side">
                         <h3>Strategic Planning and Adaptation</h3>
-                        <p>In the dynamic field of hospitality, strategic planning and adaptation are crucial. Explore ways to align your business strategy with market trends, innovate service offerings, and make data-driven decisions for sustainable growth. Connect with industry experts for insights.</p>
+                        <p>Although everyday is different, strategic planning and adaptation are crucial. Explore ways to align your business strategy with market trends, innovate service offerings, and build on data to help predict future needs. Connect with industry experts for insights.</p>
                         <a href="https://www.youtube.com/watch?v=qkU3uwWyAn8" target="_blank" alt="hotel strategy video">Strategic Resources</a>
                     </div>
                 </article>
@@ -51,13 +51,14 @@
                     <div class="image-side">
                         <img src="Images/Restaurant-Management-Skills.png" alt="Marketing Trends">
                         <div class="overlay">
-                            <p>"Embrace marketing innovation."</p>
+                            <p>"Grow your customer base through improved marketing."</p>
                         </div>
                     </div>
                     <div class="text-side">
                         <h3>Embracing New Marketing Trends</h3>
-                        <p>Understanding and implementing the latest marketing trends can set your business apart. Dive into digital marketing techniques, social media engagement strategies, and customer relationship management to enhance your brand's visibility and customer loyalty.</p>
+                        <p>Understanding and implementing the latest marketing trends can help attract new customers. Dive into digital marketing techniques, social media engagement strategies, and customer relationship management to enhance your brand's visibility and customer loyalty.</p>
                         <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank">New Tech to Make Thing Easier</a>
+                        <a href="https://coso.ai/" target="_blank">MArketing AI Software</a>
 
                     </div>
                 </article>
@@ -65,13 +66,13 @@
                     <div class="image-side">
                         <img src="Images/staff-training.jpg" alt="Staff Management">
                         <div class="overlay">
-                            <p>"Cultivate a skilled and motivated team."</p>
+                            <p>"Develop a more skilled and motivated team."</p>
                         </div>
                     </div>
                     <div class="text-side">
                         <h3>Effective Staff Management</h3>
-                        <p>The success of your business greatly depends on your staff. Learn about effective staff training programs, motivational strategies, and ways to foster a positive work environment that ensures high productivity and job satisfaction.</p>
-                        <a href="www.theworkwall.com" target="_blank" alt="link to WorkWall app"> App to Help With Your Staff Management</a>
+                        <p>Look after your staff, they'll look after your customers! Learn about effective staff training programs, motivational strategies, and how to create a more positive work environment that ensures high productivity and job satisfaction.</p>
+                        <a href="www.theworkwall.com" target="_blank" alt="link to WorkWall app">Staff Management Software</a>
                     </div>
                 </article>
             </div>
