--- a/owners.html
+++ b/owners.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Standard nav bar for all pages -->
     <header>
         <div class="navbar">
             <h1>Hospitality Help Hub</h1>
@@ -26,6 +27,7 @@
     </header>
 
     <main>
+        <!-- Opening image and text for all pages -->
         <section class="hero" style="background-image: url('Images/helpdesk.webp');">
             <div class="container">
                 <h2>Welcome, Business Owners</h2>
@@ -34,6 +36,7 @@
         </section>
         <section class="content">
             <div class="container">
+                <!-- Pages are divided into 2 or 3 "articles" with text (text-side) images with text on an overlay -->
                 <article class="article-left">
                     <div class="image-side">
                         <img src="Images/Strategy-Chess.png" alt="Business Strategy">
@@ -57,8 +60,8 @@
                     <div class="text-side">
                         <h3>Embracing New Marketing Trends</h3>
                         <p>Understanding and implementing the latest marketing trends can help attract new customers. Dive into digital marketing techniques, social media engagement strategies, and customer relationship management to enhance your brand's visibility and customer loyalty.</p>
-                        <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank">New Tech to Make Thing Easier</a>
-                        <a href="https://coso.ai/" target="_blank">Marketing AI Software</a>
+                        <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank"><img src="Images/link.png" alt="Link Icon" id="link-icon">New Tech to Make Thing Easier</a>
+                        <a href="https://coso.ai/" target="_blank"><img src="Images/link.png" alt="Link Icon" id="link-icon">Marketing AI Software</a>
 
                     </div>
                 </article>
@@ -72,7 +75,7 @@
                     <div class="text-side">
                         <h3>Effective Staff Management</h3>
                         <p>Look after your staff, they'll look after your customers! Learn about effective staff training programs, motivational strategies, and how to create a more positive work environment that ensures high productivity and job satisfaction.</p>
-                        <a href="www.theworkwall.com" target="_blank" alt="link to WorkWall app">Staff Management Software</a>
+                        <a href="www.theworkwall.com" target="_blank" alt="link to WorkWall app"><img src="Images/link.png" alt="Link Icon" id="link-icon">Staff Management Software</a>
                     </div>
                 </article>
             </div>
