--- a/staff.html
+++ b/staff.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Standard nav bar for all pages -->
     <header>
         <div class="navbar">
             <h1>Hospitality Help Hub</h1>
@@ -26,6 +27,7 @@
     </header>
 
     <main>
+        <!-- Opening image and text for all pages -->
         <section class="hero" style="background-image: url('Images/helpdesk.webp');">
             <div class="container">
                 <h2>Support and Resources for Hospitality Staff</h2>
@@ -34,6 +36,7 @@
         </section>
  <section class="intro">
             <div class="container">
+                <!-- Pages are divided into 2 or 3 "articles" with text (text-side) images with text on an overlay -->
                 <div class="staff-text">
                     <h2>Understanding the Realities and Embracing the Joys of Hospitality</h2>
                     <p>In the bustling and vibrant world of hospitality, we often find ourselves riding a rollercoaster of experiences – from the thrill of a busy service to the challenges of long hours and high pressure. It's important to acknowledge that struggling with mental health in this industry is not only common; it's an experience shared by many. It's a reality that touches the lives of chefs, servers, managers, and everyone in between. But why is this so prevalent, and what can we do about it?</p>
