--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospitality Help Hub</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" href="Images/self-love.png">
 </head>
+
 <body>
+    <!-- Standard nav bar for all pages -->
     <header>
     <div class="navbar">
         <h1>Hospitality Help Hub</h1>
@@ -29,6 +28,7 @@
     </div>
 </header>
     <main>
+        <!-- Opening image and text for all pages -->
         <section class="hero" style="background-image: url('Images/helpdesk.webp');">
             <div class="container">
                 <h2>Welcome to Your Resource Hub</h2>
@@ -37,6 +37,7 @@
         </section>
         <section class="content">
             <div class="container">
+ <!-- Pages are divided into 2 or 3 "articles" with text (text-side) images with text on an overlay -->
                 <article class="article-left">
                     <div class="image-side">
                         <img src="Images/challenge-food.jpeg" alt="Industry Challenges">
@@ -45,10 +46,12 @@
                         </div>
                     </div>
                     <div class="text-side">
-                        <h3>Overcoming Industry Challenges</h3>
-                        <p>We can help you cope in these tough times. Explore strategies for resilience and success.</p>
-                        <a href="owners.html">Advice for Owners</a> <a href="managers.html">Guidance for Managers</a>
-                    </div>
+    <h3>Overcoming Industry Challenges</h3>
+    <p>We can help you cope in these tough times. Explore strategies for resilience and success.</p>
+    <a href="owners.html"><img src="Images/link.png" alt="Link Icon" id="link-icon"> Advice for Owners</a>
+    <a href="managers.html"><img src="Images/link.png" alt="Link Icon" id="link-icon"> Guidance for Managers</a>
+</div>
+
                 </article>
                 <article class="article-right">
                     <div class="image-side">
@@ -60,7 +63,7 @@
                     <div class="text-side">
                         <h3>Getting Through The Strain</h3>
                         <p>Empower yourself with resources for personal and professional development.</p>
-                        <a href="staff.html">Support for Staff</a>
+                        <a href="staff.html"><img src="Images/link.png" alt="Link Icon" id="link-icon">Support for Staff</a>
                     </div>
                 </article>
                 <article class="article-left">
@@ -73,14 +76,14 @@
                     <div class="text-side">
                         <h3>Community Support</h3>
                         <p>Engage with your peers and help build a supportive network.</p>
-                        <label for="communityPopupCheckbox" class="popup-button">Join Our Community</label>
+                        <label for="communityPopupCheckbox" class="popup-button"><img src="Images/link.png" alt="Link Icon" id="link-icon">Join Our Community</label>
                     </div>
                 </article>
             </div>
         </section>
     </main>
 
-   
+   <!-- Pop up with links to social media groups and newsletter subscription -->
     <input type="checkbox" id="communityPopupCheckbox" class="popup-checkbox">
     <div class="popup-container" id="communityPopup">
     <div class="popup-content">
@@ -111,8 +114,8 @@
     </footer>
 </body>
 <div class="icon-ref">
-  <a href="https://www.flaticon.com/free-icons/whatsapp" title="whatsapp icons">Whatsapp icons created by Pixel perfect - Flaticon</a>
+ 
+<a href="https://www.flaticon.com/free-icons/link" title="link icons">Link icons created by Creaticca Creative Agency - Flaticon</a>
 
-<a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">Facebook icons created by Hight Quality Icons - Flaticon</a>
 </div>
 </html>
