fix link alignung right

--- a/owners.html
+++ b/owners.html
@@ -47,7 +47,7 @@
                     <div class="text-side">
                         <h3>Strategic Planning and Adaptation</h3>
                         <p>Although everyday is different, strategic planning and adaptation are crucial. Explore ways to align your business strategy with market trends, innovate service offerings, and build on data to help predict future needs. Connect with industry experts for insights.</p>
-                        <a href="https://www.youtube.com/watch?v=qkU3uwWyAn8" target="_blank" alt="hotel strategy video">Strategic Resources</a>
+                        <a href="https://www.youtube.com/watch?v=qkU3uwWyAn8" target="_blank" alt="hotel strategy video"><img src="Images/link.png" alt="Link Icon" id="link-icon">Strategic Resources</a>
                     </div>
                 </article>
                 <article class="article-right">
@@ -60,7 +60,7 @@
                     <div class="text-side">
                         <h3>Embracing New Marketing Trends</h3>
                         <p>Understanding and implementing the latest marketing trends can help attract new customers. Dive into digital marketing techniques, social media engagement strategies, and customer relationship management to enhance your brand's visibility and customer loyalty.</p>
-                        <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank"><img src="Images/link.png" alt="Link Icon" id="link-icon">New Tech to Make Thing Easier</a>
+                        <a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank"><img src="Images/link.png" alt="Link Icon" id="link-icon">New Tech to Make Things Easier</a>
                         <a href="https://coso.ai/" target="_blank"><img src="Images/link.png" alt="Link Icon" id="link-icon">Marketing AI Software</a>
 
                     </div>
